# Dijango_CI

./: README.md  pyproject.toml  requirements.txt  test_example.py
.github/workflows/: django.yml
.github/workflows/python ci/: cd workflow.yml
