[project]
name = "python-api-microservice"
version = "1.0.0"
description = "A FastAPI microservice for serving JSON data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django>=3.2",  # Add Django here
]
license = {text = "MIT"}
...

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "flake8>=7.0.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-django>=4.5.2",  # Add pytest-django for Django testing
]
